--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "test": "test"
   },
   "dependencies": {
-    "jsdoc": "^3.4.3",
-    "babel-preset-env": "^1.6.0",
-    "chai": "^3.5.0",
     "babel-cli": "^6.26.0",
-    "should": "^11.1.1",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^3.5.0",
+    "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^2.0.1",
+    "should": "^11.1.1",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "mocha": "^3.5.3"
   },
   "scripts": {
     "test": "mocha"
