messing with stuff

--- a/RapidAPI/RapidAPI/RapidAPI/RapidAPI.vcxproj.filters
+++ b/RapidAPI/RapidAPI/RapidAPI/RapidAPI.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClInclude Include="..\..\..\dependencies\libsvm\libsvm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\rapidLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
