--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ else()
         message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++17 support. Please use a different C++ compiler.")
 endif()
 
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 project(rapidlib)
@@ -19,15 +18,21 @@ set (rapidmix_VERSION_MINOR 1)
 
 # Main lib
 include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/dependencies/bayesfilter/src)
 
 # RapidLib
 file(GLOB RAPIDLIB_SRC "${PROJECT_SOURCE_DIR}/src/*.cpp")
 file(GLOB RAPIDLIB_DEP "${PROJECT_SOURCE_DIR}/dependencies/libsvm/libsvm.cpp")
 
+# Third party
+file(GLOB JSON_SRC "${PROJECT_SOURCE_DIR}/dependencies/jsoncpp.cpp")
+file(GLOB BAYES_SRC "${PROJECT_SOURCE_DIR}/dependencies/bayesfilter/src/*.cpp")
+
 # Set the source for the main library, using the groups defined above
 set(RAPIDLIB_FULL_SRC 
 		${RAPIDLIB_SRC}
 		${RAPIDLIB_DEP}
+		${JSON_SRC}
 	)
 
 add_library(RAPIDLIB SHARED ${RAPIDLIB_FULL_SRC})
