--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(RAPIDLIB_FULL_SRC
 		${RAPIDLIB_SRC}
 		${RAPIDLIB_DEP}
 		${JSON_SRC}
+		${BAYES_SRC}
 	)
 
 add_library(RAPIDLIB SHARED ${RAPIDLIB_FULL_SRC})
