--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ cmake_minimum_required(VERSION 3.10)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-project(rapidlib)
+project(rapidlib C CXX)
+
+# Threads
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 # The version number
 set (rapidmix_VERSION_MAJOR 2)
@@ -40,3 +44,4 @@ add_library(RAPIDLIB SHARED ${RAPIDLIB_FULL_SRC})
 
 add_executable(rapidLibTest test/rapidLibTest.cpp)
 target_link_libraries(rapidLibTest RAPIDLIB)
+target_link_libraries(rapidLibTest Threads::Threads)
