--- a/RapidAPI/RapidAPI/RapidAPI/RapidAPI.vcxproj.filters
+++ b/RapidAPI/RapidAPI/RapidAPI/RapidAPI.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\warpPath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\dependencies\libsvm\libsvm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\test\rapidLibTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
