--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,6 @@ add_library(RAPIDLIB SHARED ${RAPIDLIB_FULL_SRC})
 add_executable(rapidLibTest test/rapidLibTest.cpp)
 target_link_libraries(rapidLibTest RAPIDLIB)
 target_link_libraries(rapidLibTest Threads::Threads)
+
+enable_testing()
+add_test(rapidLibTest rapidLibTest)
