Build on windows?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(Threads REQUIRED)
 
 # The version number
 set (rapidmix_VERSION_MAJOR 2)
-set (rapidmix_VERSION_MINOR 1)
+set (rapidmix_VERSION_MINOR 2)
 
 # Main lib
 include_directories(${PROJECT_SOURCE_DIR}/src)
@@ -38,8 +38,11 @@ set(RAPIDLIB_FULL_SRC
 	)
 
 add_library(RAPIDLIB SHARED ${RAPIDLIB_FULL_SRC})
-
 add_executable(rapidLibTest test/rapidLibTest.cpp)
+
+include(GenerateExportHeader)
+generate_export_header(RAPIDLIB)
+
 target_link_libraries(rapidLibTest RAPIDLIB)
 target_link_libraries(rapidLibTest Threads::Threads)
 
