--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -18,3 +18,5 @@ jobs:
     - name: test
       run: cd build && ctest
       
+    - name: Doxygen Action
+      uses: mattnotmitt/doxygen-action@v1.3.1
