--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -20,3 +20,8 @@ jobs:
       
     - name: Doxygen Action
       uses: mattnotmitt/doxygen-action@v1.3.1
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./doxygen
