just building debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(rapidLib)
 
 if (MSVC)
-    add_compile_options(/std:c++17 /O2)
+    add_compile_options(/std:c++17)
 else()
     add_compile_options(-std=c++17 -O2)
 endif()
