--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -18,4 +18,8 @@ jobs:
       run: cmake --build build
     - name: test
       run: cd build && ctest
- 
+    - name: Upload RapidLibPlugin build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: RapidLibPlugin
+        path: build/
